[tool.poetry]
name = "pyvhs"
version = "0.1.1"
description = "Digitized VHS Cassette Editing with Python"
authors = ["Myles Dunlap"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mddunlap924/PyVHS/tree/main"
keywords = ["vhs", "vcr", "image processing", "video"]

include = ["doc/*"]

[tool.poetry.dependencies]
python = "^3.8"
moviepy = "^1.0.3"
pygame = "^2.4.0"
scikit-image = "^0.21.0"
matplotlib = "^3.7.1"

[tool.poetry.scripts]
pyvhs = 'pyvhs.vhs:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
